made sound toggleable

--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
 				<div class="pretty p-switch">
 					<input type="checkbox" name="enable-notifications" />
 					<div class="state p-success">
-						<label>Release Notifications</label>
+						<label>Enable Notifications</label>
+					</div>
+				</div>
+				<br>
+				<div class="pretty p-switch">
+					<input type="checkbox" name="enable-sound" />
+					<div class="state p-success">
+						<label>Enable Sound</label>
 					</div>
 				</div>
 			</div>
