fixed page shift

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</h3>
 
 			<p id="livetext" class="txt-center l1-txt2 p-b-60">
-				
+				Loading...
 			</p>
 
 			<p id="latest" class="txt-center l1-txt2 p-b-60">
