--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
 	<title>Is The Snapshot Live?</title>
 	<meta charset="utf-8">
-    <meta name="language" content="english"> 
-    <meta http-equiv="content-type" content="text/html">
-    <meta name="author" content="FlawCra">
-    <meta name="designer" content="FlawCra">
-    <meta name="publisher" content="FlawCra">
-    <meta name="no-email-collection" content="http://www.unspam.com/noemailcollection/">
+	<meta http-equiv="content-type" content="text/html">
+	<meta name="designer" content="FlawCra">
+	<meta name="publisher" content="FlawCra">
+	<meta name="no-email-collection" content="http://www.unspam.com/noemailcollection/">
 
-    <meta name="description" content="made by FlawCra">
-    <meta name="robots" content="index,follow">
-    <meta name="revisit-after" content="7 days">
-    <meta name="distribution" content="web">
-    <meta name="robots" content="noodp">
+	<meta name="revisit-after" content="7 days">
+	<meta name="distribution" content="web">
+	<meta name="title" content="Is the Snapshot live?">
+	<meta name="description" content="Never miss a Minecraft Snapshot release with is-the-snapshot.live. Get notified and stay up-to-date with the latest updates.">
+	<meta name="keywords" content="minecraft snapshot, snapshot, is the snapshot live, mc snapshots, snapshots, minecraft snapshots">
+	<meta name="robots" content="index, follow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="language" content="English">
+	<meta name="author" content="FlawCra">
 
-    <meta name="distribution" content="web">
-    <meta name="web_author" content="FlawCra">
-    <meta name="rating" content="general">
-    <meta name="title" content="Is the Snapshot live?">
-    <meta property="og:image" content="https://is-the-snapshot.live/images/icons/logo.png">
-    <meta name="copyright" content="Copyright 2022">
-    <meta name="distribution" content="global">
-    <meta name="wot-verification" content="2eb1504c8dc3f0b40b39"/>
+	<meta name="web_author" content="FlawCra">
+	<meta name="rating" content="general">
+	<meta property="og:image" content="https://is-the-snapshot.live/images/icons/logo.png">
+	<meta name="copyright" content="Copyright 2022">
+	<meta name="distribution" content="global">
+	<meta name="wot-verification" content="20e58758a746d8ebf74b"/>
 
-    <meta name="format-detection" content="telephone=yes"/>
-    <meta name="HandheldFriendly" content="true"/> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name="format-detection" content="telephone=yes"/>
+	<meta name="HandheldFriendly" content="true"/> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <!--===============================================================================================-->	
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 <!--===============================================================================================-->
