--- a/index.html
+++ b/index.html
@@ -109,16 +109,11 @@
 	</script>
 <!--===============================================================================================-->
 	<script
-		src="https://cors.flawcra.cc/?https://browser.sentry-cdn.com/6.19.7/bundle.min.js"
-		integrity="sha384-KXjn4K+AYjp1cparCXazrB+5HKdi69IUYz8glD3ySH3fnDgMX3Wg6VTMvXUGr4KB"
-		crossorigin="anonymous"
+			src="https://browser.sentry-cdn.com/7.77.0/bundle.tracing.replay.min.js"
+			integrity="sha384-OKHElBQJJIwDxyzJNjyBXH6DF/kK6MJO1iN/cSS4BjCOr76ChDkzpIYOQ9/XPOuW"
+			crossorigin="anonymous"
 	></script>
-	<script
-		src="https://cors.flawcra.cc/?https://browser.sentry-cdn.com/6.19.7/bundle.tracing.min.js"
-		integrity="sha384-lEBvyPG01tsv1WahtwAQevkCCh3NjqUNlz93IATGFmFuVbVyx6dReoQ035OOjNsM"
-		crossorigin="anonymous"
-	></script>
-	<script src="https://cdn.jsdelivr.net/npm/flawcralib@1.0.6/dist/main.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/flawcralib@1.0.9/dist/main.js"></script>
 	<script src="js/main.js"></script>
 
 </body>
