--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		</div>
 
 		<span class="s1-txt3 txt-center">
-			<script id="copyright">document.getElementById("copyright").parentElement.innerText = "© "+new Date().getFullYear()+" FlawCra."</script>
+			<span>© <script>document.currentScript.outerHTML = new Date().getFullYear();</script> FlawCra.</span>
 		</span>
 		
 	</div>
